--- a/.gitignore
+++ b/.gitignore
@@ -84,7 +84,7 @@ celerybeat-schedule
 # Environments
 .env
 .venv
-env/
+myenv/
 venv/
 ENV/
 env.bak/
@@ -102,3 +102,5 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+report.json
